# pacs_system

./: .gitattributes  .gitignore  Basic-example.html  Batch-example.html  C-GET-example.html  C-MOVE-example.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cache-example.html  DEVIATIONS.md  DOC_REVIEW_REPORT.md  Doxyfile  Handler-example.html  LICENSE  LICENSE-THIRD-PARTY  README.kr.md  README.md  README_8md.html  README_KO.md  README_Windows.md  SCU-example.html  SECURITY.md  Streaming-example.html  Usage-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2examples_2query_scu_2query_builder_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2ai_2ai_result_handler_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2ai_2ai_service_connector_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2ai_2aira_assessment_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2ai_2aira_assessment_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2job_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2prefetch_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2remote_node_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2remote_node_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2routing_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2client_2sync_manager_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2core_2dicom_dataset_8h-example.html  _2home_2runner_2work_2pacs_system_2pacs_system_2include_2kcenon_2pacs_2core_2dicom_dictionary_8h-example.html  (+17079 more)
apps/: CMakeLists.txt  pacs_server.cpp
benchmarks/simd_performance/: CMakeLists.txt  byte_swap_benchmark.cpp  photometric_benchmark.cpp  rle_simd_benchmark.cpp  simd_benchmark_common.h  simd_benchmark_common.hpp  windowing_benchmark.cpp
benchmarks/thread_performance/: CMakeLists.txt  association_benchmark.cpp  benchmark_common.h  benchmark_common.hpp  concurrent_load_benchmark.cpp  shutdown_benchmark.cpp  throughput_benchmark.cpp
common/: CMakeLists.txt  dicom_util.cpp  dicom_util.h  pacs_common.h  performance.cpp  performance.h  performance_standalone.cpp  service_config.cpp  service_config.h
common/audit/: CMakeLists.txt  audit_logger.cpp  audit_logger.h
common/compliance/: gdpr_manager.h
common/config/: CMakeLists.txt  config_manager.cpp  config_manager.h
common/dicom/: CMakeLists.txt  codec_manager.cpp  codec_manager.h  dicom_definitions.h  dicom_error.cpp  dicom_error.h  dicom_file.cpp  dicom_file.h  dicom_object.cpp  dicom_object.h  dicom_tag.cpp  dicom_tag.h  storage_client.cpp  storage_client.h  storage_server.cpp  storage_server.h
common/integration/: hl7_interface.h
common/logger/: CMakeLists.txt  logger.cpp  logger.h  logging_service.cpp  logging_service.h
common/monitoring/: CMakeLists.txt  monitoring_dashboard.h  monitoring_service.cpp  monitoring_service.h
common/network/: CMakeLists.txt  connection_pool.h  dicom_connection_pool.cpp  dicom_connection_pool.h  retry_policy.h
common/performance/: performance_optimizer.h
common/security/: CMakeLists.txt  crypto_manager.cpp  crypto_manager.h  dcmtk_tls_adapter.cpp  dcmtk_tls_adapter.h  security_manager.cpp  security_manager.h  tls_config.cpp  tls_config.h
common/storage/: CMakeLists.txt  encrypted_storage.cpp  encrypted_storage.h
common/version/: CMakeLists.txt  api_version.h
core/: CMakeLists.txt
core/api/: CMakeLists.txt  rest_api_server.cpp  rest_api_server.h
core/database/: CMakeLists.txt  database_interface.cpp  database_interface.h  database_manager.cpp  database_manager.h  postgresql_database.cpp  postgresql_database.h  sqlite_database.cpp  sqlite_database.h
core/interfaces/: CMakeLists.txt  service_interface.h
core/result/: CMakeLists.txt  result.h
core/thread/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  connection_pool_example.cpp  query_retrieve_example.cpp  simple_client.cpp
examples/01_hello_dicom/: CMakeLists.txt  README.md
examples/02_echo_server/: CMakeLists.txt  README.md
examples/03_storage_server/: CMakeLists.txt  README.md
examples/04_mini_pacs/: CMakeLists.txt  README.md  main.cpp  mini_pacs.cpp
examples/05_production_pacs/: CMakeLists.txt  README.md  config_loader.cpp  config_loader.h  main.cpp  production_pacs.cpp
examples/common/: CMakeLists.txt  README.md  console_utils.cpp  console_utils.h  signal_handler.cpp  test_data_generator.cpp  test_data_generator.h
examples/db_browser/: CMakeLists.txt  main.cpp
examples/dcm_anonymize/: main.cpp
examples/dcm_conv/: main.cpp
examples/dcm_dir/: main.cpp
examples/dcm_dump/: CMakeLists.txt  main.cpp
examples/dcm_extract/: CMakeLists.txt  main.cpp
examples/dcm_info/: CMakeLists.txt  main.cpp
examples/dcm_modify/: anonymizer.hpp  main.cpp
examples/dcm_to_json/: CMakeLists.txt  main.cpp
examples/dcm_to_xml/: CMakeLists.txt  main.cpp
examples/echo_scp/: CMakeLists.txt  main.cpp
examples/echo_scu/: CMakeLists.txt  main.cpp
examples/find_scu/: main.cpp
examples/get_scu/: CMakeLists.txt  main.cpp
examples/img_to_dcm/: main.cpp
examples/integration_tests/: CMakeLists.txt  README.md  dcmtk_tool.hpp  generate_test_data.cpp  main.cpp  test_cli_roundtrip.cpp  test_connectivity.cpp  test_data_generator.cpp  test_data_generator.h  test_data_generator.hpp  test_data_generator_test.cpp  test_dcmtk_echo.cpp  test_dcmtk_find.cpp  (+14 more)
fuzz/: CMakeLists.txt  fuzz_dicom_file_parser.cpp  fuzz_explicit_vr_codec.cpp  fuzz_implicit_vr_codec.cpp  fuzz_pdu_decoder.cpp  fuzz_rle_codec.cpp
samples/: CMakeLists.txt  README.md  simple_dicom_test.cpp  storage_test.cpp
sdk/: CMakeLists.txt
tests/: CMakeLists.txt  test_dcmtk_integration.cpp
(+2327 files in other folders)
